--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,19 +9,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
+    <EditText
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:hint="drop text"/>
+    <Button
+        android:id="@+id/drop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Drop"
+        android:layout_toRightOf="@+id/header"/>
 
-    <fragment
+      <fragment
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_below="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        class="com.google.android.gms.maps.SupportMapFragment" />
+
+    
 
 </RelativeLayout>
