--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,7 +20,12 @@
         android:layout_height="wrap_content"
         android:text="Drop"
         android:layout_toRightOf="@+id/header"/>
-
+	<Button
+        android:id="@+id/open"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open"
+        android:layout_toRightOf="@+id/drop"/>
       <fragment
         android:id="@+id/map"
         android:layout_below="@+id/header"
