--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,6 +26,12 @@
         android:layout_height="wrap_content"
         android:text="Open"
         android:layout_toRightOf="@+id/drop"/>
+	<Button
+        android:id="@+id/capture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Capture"
+        android:layout_toRightOf="@+id/open"/>
       <fragment
         android:id="@+id/map"
         android:layout_below="@+id/header"
