--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,25 +13,20 @@
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="drop text"/>
+        android:hint="message text"/>
     <Button
         android:id="@+id/drop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Drop"
+        android:text="Send2Server"
         android:layout_toRightOf="@+id/header"/>
-	<Button
-        android:id="@+id/open"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Open"
-        android:layout_toRightOf="@+id/drop"/>
+
 	<Button
         android:id="@+id/capture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Capture"
-        android:layout_toRightOf="@+id/open"/>
+        android:layout_toRightOf="@+id/drop"/>
       <fragment
         android:id="@+id/map"
         android:layout_below="@+id/header"
